refactor: remove some warnings by using modern APIs
Signed-off-by: Cristóbal Veas <cristobal.veas@proton.me>